--- a/config.toml
+++ b/config.toml
@@ -1,6 +1,6 @@
 baseURL = 'http://example.org/'
 languageCode = 'en-us'
-title = 'My New Hugo Site'
+title = 'Game Helper'
 theme = 'ananke'
 [params]
    custom_css = ['my_style.css']
